--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "firebase": "^5.8.2",
+    "save": "^2.3.3",
     "vue": "^2.5.22",
     "vue-router": "^3.0.2"
   },
