--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "event-stream": "^3.3.4",
     "firebase": "^5.8.2",
     "save": "^2.3.3",
     "vue": "^2.5.22",
