--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "event-stream": "^3.3.4",
-    "firebase": "^5.8.2",
+    "firebase": "^5.8.4",
     "save": "^2.3.3",
     "vue": "^2.5.22",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuefire": "^2.0.0-alpha.20"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
