--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "save": "^2.3.3",
     "vue": "^2.5.22",
     "vue-router": "^3.0.2",
-    "vuefire": "^2.0.0-alpha.20"
+    "vuefire": "^2.0.0-alpha.20",
+    "vuetify": "^1.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
