--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "event-stream": "^3.3.4",
     "firebase": "^5.8.4",
@@ -16,7 +17,8 @@
     "vue": "^2.5.22",
     "vue-router": "^3.0.2",
     "vuefire": "^2.0.0-alpha.20",
-    "vuetify": "^1.5.3"
+    "vuetify": "^1.5.3",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
