--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "save": "^2.3.3",
     "vue": "^2.5.22",
     "vue-router": "^3.0.2",
+    "vue2-google-maps": "^0.10.6",
     "vuefire": "^2.0.0-alpha.20",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.0"
