--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^5.8.4",
     "save": "^2.3.3",
     "vue": "^2.5.22",
+    "vue-analytics": "^5.16.4",
     "vue-router": "^3.0.2",
     "vue2-google-maps": "^0.10.6",
     "vuefire": "^2.0.0-alpha.20",
