--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.0.0-rc.14",
     "event-stream": "^3.3.4",
     "firebase": "^5.8.4",
+    "jquery": "^3.3.1",
     "save": "^2.3.3",
     "vue": "^2.5.22",
     "vue-analytics": "^5.16.4",
@@ -30,7 +31,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
+    "@vue/cli-service": "^3.5.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
